Update info about problems when uploading AI programs.

--- a/index-jp.html
+++ b/index-jp.html
@@ -23,7 +23,7 @@
 <br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 <a href="http://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>　
-<a href="http://www.gstylus.co.jp/"><img src="images/gyaku_logo.jpg" width="75"/></a> 
+<a href="http://www.gstylus.co.jp/"><img src="images/gyaku_logo.jpg" width="75"/></a>
 <br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="95"/></a>
 <a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="65"/></a>
@@ -59,7 +59,7 @@
       <p>今年度も SamurAI Coding 2016-17 を開催いたします。ゲームをテーマにした人工知能およびプログラミングのスキルを競い、予選を勝ち抜いたチームが2017年3月に名古屋市で開催される決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/79/">情報処理学会 第79回全国大会</a>
 	に併設されます。参加エンジニア・プログラマはその能力が世界で通用するか本コンテストを通じて試すことができます。</p>
     </section>
-    
+
     <table border="0">
     	<tr><td><img src="banner.png" width=600 /><td>
     		<td>
@@ -106,6 +106,8 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月8日: リソース制限の追加に伴って発生していた新規にAIプログラムをアップロードできなくなる問題を解決しました。
+<li>2月7日: 試合の公平性を高める目的で、各AIプログラムに対して、CPUを1コア、メモリを1GBとするリソース制限を追加しました。
 <li>2月7日: サーバー障害の発生を防ぐ目的で<a href="software-jp.html">ゲームの実行管理システム</a>を更新しました。
 <li>2月5日: 障害発生の期間中にアップロードされたAIプログラムが破損していることが判明しました。破損したAIプログラムの復旧は不可能であるため、大変お手数をお返しますが最新版を再投稿ください。また、環境の更新に伴い不具合が生じる可能性があるため、お気づきの点がございましたら、ご連絡ください。
 <li>2月5日: サーバー移転に伴う問題が生じているようで、現在、原因を究明中です。
@@ -205,15 +207,15 @@
 
     <section id="committee">
       <h2>委員会体制</h2>
-<p>鷲崎弘宜（早稲田大学, 委員長）, 平石拓（京都大学, 副委員長）, 
+<p>鷲崎弘宜（早稲田大学, 委員長）, 平石拓（京都大学, 副委員長）,
 近山隆（東京大学名誉教授, エクゼクティブアドバイザー）,
-竹内郁雄（東京大学名誉教授), 
-高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）, 
+竹内郁雄（東京大学名誉教授),
+高田眞吾（慶應義塾大学）,  吉野松樹（日立製作所）,
 坂本一憲（国立情報学研究所）,
-田中哲朗（東京大学）, 
+田中哲朗（東京大学）,
 三輪 誠（豊田工業大学），
-大場みち子（はこだて未来大学）, 
-深澤紀子（鉄道総合技術研究所）, 
+大場みち子（はこだて未来大学）,
+深澤紀子（鉄道総合技術研究所）,
 鈴木 浩（富士通研究所）
 </p>
 <h2>ゲーム開発チーム（2015年度）</h2>
@@ -223,7 +225,7 @@
 鈴木 遼（早稲田大学）、
 橋本 和真（東京大学）、
 横井 泰佑（早稲田大学）、
-劉 雲青（東京大学）	
+劉 雲青（東京大学）
 </p>
     </section>
 
