--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
-<li>Feb 11: All of AI programs submitted and availale on the battle execution server at the timing of due of call for challenge of online preliminary round will be automatically used for the online preliminary round. Note that the current rating displayed on the battle execution server is independent from the online preliminary round; the online preliminary round will be conducted independently based on <a href="http://samuraicoding.info/preliminary.html">its rule</a>. 
+<li>Feb 11: All of AI programs submitted and available on the battle execution server at the timing of due of call for challenge of online preliminary round will be automatically used for the online preliminary round. Note that the current rating displayed on the battle execution server is independent from the online preliminary round; the online preliminary round will be conducted independently based on <a href="http://samuraicoding.info/preliminary.html">its rule</a>. 
 <li>Feb 8: We fixed the bug which prevented you from uploading new AI programs. This bug was introduced when we added the CPU and memory restrictions yesterday.
 <li>Feb 7: We added the CPU restrinction (1 core per 1 AI) and memory restriction (1GB per 1 AI) to make matches fairer.
 <li>Feb 7: The <a href="software.html">Game Management System</a> has been updated to avoid server troubles.
