--- a/index-jp.html
+++ b/index-jp.html
@@ -106,6 +106,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月12日: オンライン予選への投稿を締め切りました。多くのご投稿、有難うございました。オンライン予選の結果発表は現時点で2017年2月17日（金）AoE頃を予定していますが、変更の場合は本サイト上でお知らせします。
 <li>2月11日: 締め切り時点でコンテストサーバー上に投稿されている全てのAIプログラムがオンライン予選の対象となります。なお、コンテストサーバー上で実施中のTrial Roundにおけるレーティングは、オンライン予選とは関係ありません。オンライン予選は<a href="http://samuraicoding.info/preliminary-jp.html">予選のルール</a>に従って実施されます。
 <li>2月8日: リソース制限の追加に伴って発生していた新規にAIプログラムをアップロードできなくなる問題を解決しました。
 <li>2月7日: 試合の公平性を高める目的で、各AIプログラムに対して、CPUを1コア、メモリを1GBとするリソース制限を追加しました。
