Preliminary Round results.

--- a/index-jp.html
+++ b/index-jp.html
@@ -106,6 +106,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>2月17日: オンライン予選に基づく選抜結果を掲載しました。全136チームから選抜された決勝進出16チームの皆さん、おめでとうございます！ 惜しかった皆さん、ぜひ名古屋で決勝を一緒に観戦しましょう。また懇親会への先着順招待を実施することを検討しています。
 <li>2月12日: オンライン予選への投稿を締め切りました。多くのご投稿、有難うございました。オンライン予選の結果発表は現時点で2017年2月17日（金）AoE頃を予定していますが、変更の場合は本サイト上でお知らせします。
 <li>2月11日: 締め切り時点でコンテストサーバー上に投稿されている全てのAIプログラムがオンライン予選の対象となります。なお、コンテストサーバー上で実施中のTrial Roundにおけるレーティングは、オンライン予選とは関係ありません。オンライン予選は<a href="http://samuraicoding.info/preliminary-jp.html">予選のルール</a>に従って実施されます。
 <li>2月8日: リソース制限の追加に伴って発生していた新規にAIプログラムをアップロードできなくなる問題を解決しました。
