--- a/preliminary-jp.html
+++ b/preliminary-jp.html
@@ -68,9 +68,576 @@
 <h2>予選の結果</h2>
 
 <p>
-(TBD)
+予選を実施した結果、参加136チーム中で以下の16チームの決勝進出を決定しました。 チームの地域バランスの考慮の結果、得点上位の14チームを選抜し、残り2チームは海外からの参加チームのうちで成績優秀なチームを選抜しました。決勝進出チームの皆さん、おめでとうございます！ 名古屋で会いましょう。
 </p>
 
+<p>
+惜しくも選抜されなかった皆さん、決勝をぜひ一緒に観戦しましょう。
+また懇親会に先着順で招待する予定です。 懇親会招待については後日、事務局から連絡します。
+</p>
+
+<table>
+	<tr>
+		<th>Place</th>
+		<th>Team name</th>
+		<th>Points</th>
+		<th>Selected for world final</th>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>サーバルちゃん</td>
+		<td>268</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>2</td>
+		<td>ちのじょ</td>
+		<td>268</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>3</td>
+		<td>ys</td>
+		<td>266</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>4</td>
+		<td>sumoru</td>
+		<td>264</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>5</td>
+		<td>suikkee</td>
+		<td>256</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>6</td>
+		<td>K2</td>
+		<td>254</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>7</td>
+		<td>y_kawano</td>
+		<td>252</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>8</td>
+		<td>kasuka</td>
+		<td>248</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>9</td>
+		<td>uptoyou</td>
+		<td>246</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>10</td>
+		<td>remin</td>
+		<td>246</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>11</td>
+		<td>ガチャピソ</td>
+		<td>240</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>12</td>
+		<td>Ryoto</td>
+		<td>238</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>13</td>
+		<td>motono</td>
+		<td>238</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>14</td>
+		<td>natadecoco</td>
+		<td>234</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>15</td>
+		<td>johnnyhibiki</td>
+		<td>232</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>16</td>
+		<td>□×５</td>
+		<td>232</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>17</td>
+		<td>kazunetakahashi</td>
+		<td>231</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>18</td>
+		<td>progmate</td>
+		<td>230</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>19</td>
+		<td>inobee</td>
+		<td>226</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>20</td>
+		<td>dyuji</td>
+		<td>225</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>21</td>
+		<td>kamaboko</td>
+		<td>223</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>22</td>
+		<td>l&lt; l&lt; ln</td>
+		<td>222</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>23</td>
+		<td>turtle</td>
+		<td>220</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>24</td>
+		<td>SuzuTaku</td>
+		<td>218</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>25</td>
+		<td>ouo</td>
+		<td>216</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>26</td>
+		<td>test</td>
+		<td>211</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>27</td>
+		<td>nekroz</td>
+		<td>210</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>28</td>
+		<td>ASDFFDSA</td>
+		<td>207</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>29</td>
+		<td>sunshine_pikotarou</td>
+		<td>206</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>30</td>
+		<td>Setter</td>
+		<td>204</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>31</td>
+		<td>mktest</td>
+		<td>202</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>32</td>
+		<td>akakasititu</td>
+		<td>201</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>33</td>
+		<td>tanitest</td>
+		<td>200</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>34</td>
+		<td>sayama_kikan</td>
+		<td>200</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>35</td>
+		<td>aaaa</td>
+		<td>199</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>36</td>
+		<td>kiki</td>
+		<td>198</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>37</td>
+		<td>piyo</td>
+		<td>195</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>38</td>
+		<td>Taiyo</td>
+		<td>192</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>39</td>
+		<td>WhiteCat</td>
+		<td>191</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>40</td>
+		<td>SHM</td>
+		<td>185</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>41</td>
+		<td>sDrunk</td>
+		<td>184</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>42</td>
+		<td>odds</td>
+		<td>184</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>43</td>
+		<td>gmkz</td>
+		<td>182</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>44</td>
+		<td>comb a tongue</td>
+		<td>180</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>45</td>
+		<td>yamatchan</td>
+		<td>178</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>46</td>
+		<td>服部半蔵</td>
+		<td>176</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>47</td>
+		<td>yasai</td>
+		<td>169</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>48</td>
+		<td>nhho</td>
+		<td>169</td>
+		<td>Selected</td>
+	</tr>
+	<tr>
+		<td>49</td>
+		<td>AL</td>
+		<td>163</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>50</td>
+		<td>Marice</td>
+		<td>163</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>51</td>
+		<td>km</td>
+		<td>162</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>52</td>
+		<td>TN</td>
+		<td>162</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>53</td>
+		<td>ss_54</td>
+		<td>161</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>54</td>
+		<td>restpal</td>
+		<td>160</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>55</td>
+		<td>Garchomp</td>
+		<td>160</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>56</td>
+		<td>c-pro</td>
+		<td>158</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>57</td>
+		<td>tz</td>
+		<td>158</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>58</td>
+		<td>kaki</td>
+		<td>156</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>59</td>
+		<td>課題40</td>
+		<td>154</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>60</td>
+		<td>28</td>
+		<td>154</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>61</td>
+		<td>fmhr</td>
+		<td>152</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>62</td>
+		<td>family</td>
+		<td>150</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>63</td>
+		<td>bobuhiro11</td>
+		<td>148</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>64</td>
+		<td>goldfish_bowl</td>
+		<td>147</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>65</td>
+		<td>yet_another_student</td>
+		<td>142</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>66</td>
+		<td>naminami</td>
+		<td>138</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>67</td>
+		<td>okazaki</td>
+		<td>138</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>68</td>
+		<td>tt000</td>
+		<td>136</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>69</td>
+		<td>sominsai</td>
+		<td>133</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>70</td>
+		<td>mishima_samurai</td>
+		<td>133</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>71</td>
+		<td>wsd</td>
+		<td>133</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>72</td>
+		<td>tugumi</td>
+		<td>133</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>73</td>
+		<td>ML</td>
+		<td>131</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>74</td>
+		<td>ytiz</td>
+		<td>131</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>75</td>
+		<td>shino_cs</td>
+		<td>131</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>76</td>
+		<td>orukakka</td>
+		<td>131</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>77</td>
+		<td>masa</td>
+		<td>131</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>78</td>
+		<td>プログラミングC課題番号40</td>
+		<td>130</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>79</td>
+		<td>ss_proc</td>
+		<td>129</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>80</td>
+		<td>rainbow</td>
+		<td>127</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>81</td>
+		<td>waseda</td>
+		<td>127</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>82</td>
+		<td>nkatoon</td>
+		<td>125</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>83</td>
+		<td>utsubo</td>
+		<td>121</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>84</td>
+		<td>Aleph</td>
+		<td>120</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>85</td>
+		<td>tempura</td>
+		<td>118</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>86</td>
+		<td>HM</td>
+		<td>114</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>87</td>
+		<td>mokazaki</td>
+		<td>114</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>88</td>
+		<td>H.N.</td>
+		<td>112</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>89</td>
+		<td>ykk</td>
+		<td>112</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>90</td>
+		<td>TakahiroShibui</td>
+		<td>104</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td>91</td>
+		<td>orange03</td>
+		<td>100</td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+	</tr>
+</table>
+
+<p>
+Honorable mention: ninJa, tanpop, daisyo, tsukimizake, papapa, zhengze2014@gmail.com, TFRC
+A_Sasaki, www, syota_ogawa, Oiwake, λ. hambda, x, xashru, wrsn, Daiki, ichihara, ytsukagoshi, 142086, pyonpyon, Takayuki Sakamoto, HK, D, makita, Jian Peiyi, itabashi, iwatsushi, waseda univ, Ulab, fujii, 1w142289-3, A team, Mota_PC, Yamaguchi Bros, black_socks, kazuto, imts, ma34, 尾形亮二, ねお, jai, Tengichaduoc, forward, Ayashi, Senzaki
+</p>
 
 <hr/>
 <footer>
