--- a/SoftwareInfo.html
+++ b/SoftwareInfo.html
@@ -18,8 +18,10 @@
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a>
 <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
+<br>
 <a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="140"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a>
+<a href="https://kuma-foundation.org/"><img src="images/KUMA2.png" width="140"/></a>
 <br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 <a href="http://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
@@ -215,6 +217,10 @@ xbuild --verison | head -n 1
 
 <p>RecoChoku Co.,Ltd.<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a></p>
+
+<p>Kuma Foundation<br>
+<a href="https://kuma-foundation.org/"><img src="images/KUMA2.png" width="140"/></a>
+
 <!--
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
@@ -307,9 +313,7 @@ The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a><br><br>
 -->
 
-<!--
 The Ministry of Economy, Trade and Industry<br><br>
--->
 
 The Ministry of Education, Culture, Sports, Science and Technology
 <br><br>
