--- a/rules.html
+++ b/rules.html
@@ -107,6 +107,9 @@ AI program that decides the actions of the samurai that plays the games. </p>
 <p>RecoChoku Co.,Ltd.<br>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="172"/></a></p>
 
+<p>Kuma Foundation<br>
+<a href="https://kuma-foundation.org/"><img src="images/KUMA2.png" width="140"/></a>
+
 <!--
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
@@ -199,9 +202,7 @@ The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a><br><br>
 -->
 
-<!--
 The Ministry of Economy, Trade and Industry<br><br>
--->
 
 The Ministry of Education, Culture, Sports, Science and Technology
 <br><br>
