--- a/index-jp.html
+++ b/index-jp.html
@@ -108,6 +108,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+<li>3月3日: 療治中のサムライに対する命令が無視された場合、そのピリオドで行動済とするか否かについて、ゲームマネージャとビジュアライザの解釈の不一致があった。命令が無視された場合は行動済としないように<a href="software-jp.html">ビジュアライザ</a> を修正した。
 <li>2月17日: <a href="preliminary-jp.html">オンライン予選に基づく選抜結果を掲載しました。</a> 全136チームから選抜された決勝進出16チームの皆さん、おめでとうございます！ 惜しかった皆さん、ぜひ名古屋で決勝を一緒に観戦しましょう。また懇親会への先着順招待を実施することを検討しています。
 <li>2月12日: オンライン予選への投稿を締め切りました。多くのご投稿、有難うございました。オンライン予選の結果発表は現時点で2017年2月17日（金）AoE頃を予定していますが、変更の場合は本サイト上でお知らせします。
 <li>2月11日: 締め切り時点でコンテストサーバー上に投稿されている全てのAIプログラムがオンライン予選の対象となります。なお、コンテストサーバー上で実施中のTrial Roundにおけるレーティングは、オンライン予選とは関係ありません。オンライン予選は<a href="http://samuraicoding.info/preliminary-jp.html">予選のルール</a>に従って実施されます。
