--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Mar 3: When a samurai under treatment is ordered some actions which is ignored, the game manager and the visualizer interpret the rule differently on whether or not the samurai should be considered to be placed an order in the period. <a href="software.html">The visualizer</a> has been revised to interpret the ignored orders are not placed int the period.
 <li>Feb 17: <a href="preliminary.html">The result of the online preliminary round is out!</a> 
 Congratulations to all 16 winners (among 136 teams)! 
 For other teams that lost the online preliminary round, 
