--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Mar 9: If you do not come to the contest site, you can still enjoy the contest by watching <a href="http://live.nicovideo.jp/watch/lv289954681">NicoNicoVideo Broadcasting</a>. Watch the world final together!
 <li>Mar 4: We updated <a href="software.html">the visualizer</a> by fixing a bug to make it work well.
 <li>Mar 3: When a samurai under treatment is ordered some actions which is ignored, the game manager and the visualizer interpret the rule differently on whether or not the samurai should be considered to be placed an order in the period. <a href="software.html">The visualizer</a> has been revised to interpret the ignored orders are not placed int the period.
 <li>Feb 17: <a href="preliminary.html">The result of the online preliminary round is out!</a> 
