--- a/final-jp.html
+++ b/final-jp.html
@@ -57,6 +57,28 @@
 
 <h2>決勝</h2>
 
+<p>
+2017年3月17日（金）に名古屋大学にて決勝を開催します。
+<a href="http://www.ipsj.or.jp/event/taikai/79">情報処理学会第79回全国大会併催</a>となります。
+</p>
+
+<h3>スケジュール</h3>
+
+<pre>
+14:50 ‒ 15:20 Registration
+15:20 ‒ 17:30 Opening
+ Tournament Matches with Introductions of Participants at the
+　　　　　　　　　First Round
+17:30 ‒ 17:50 Award ceremony
+18:00 ‒ 20:00 Banquet
+</pre>
+
+<h3>生中継</h3>
+
+<p>
+<a href="http://live.nicovideo.jp/watch/lv289954681">ニコニコ生放送【情報処理学会チャンネル】</a> にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
+</p>
+
 <h3>ルール</h3>
 <ul>
   <li><a href="FinalRoundRule-jp.pdf">決勝ルール</a> (2016年12月22日版)</li>
