--- a/final.html
+++ b/final.html
@@ -56,6 +56,27 @@
 
 <h2>Final Round</h2>
 
+<p>
+On March 17, World Final Round will be held in Nagoya (collocated with 79th IPSJ National Convention at <a href="http://en.nagoya-u.ac.jp/access/index.html">Nagoya University, Higashiyama Campus</a>).</li>
+</p>
+
+<h3>Schedule</h3>
+
+<pre>
+14:50 ‒ 15:20 Registration
+15:20 ‒ 17:30 Opening
+ Tournament Matches with Introductions of Participants at the
+　　　　　　　　　First Round
+17:30 ‒ 17:50 Award ceremony
+18:00 ‒ 20:00 Banquet
+</pre>
+
+<h3>Broadcasting</h3>
+
+<p>
+If you do not come to the contest site, you can still enjoy the contest by watching <a href="http://live.nicovideo.jp/watch/lv289954681">NicoNicoVideo Broadcasting</a>. Watch the world final together!
+</p>
+
 <h3>Rules</h3>
 
 <ul>
