--- a/final.html
+++ b/final.html
@@ -95,24 +95,28 @@ Congratulations!
 <li>株式会社いい生活 e-Seikatsu Co.,Ltd.: ys, Serval-chan （サーバルちゃん）
 </ul>
 
-<pre>
-1.ys(FIRST PLACE)
-2.サーバルちゃん(SECOND PLACE)
-3.ちのじょ(THIRD PLACE)
-4.sumoru(FOURTH PLACE)
-5.suikkee(FIFTH PLACE)
-6.kasuka(SIXTH PLACE)
-7.remin(SEVENTH PLACE)
-8.ガチャピソ(EIGHTH PLACE)
-9～16.nhho(WORLD FINALIST)
-uptoyou(WORLD FINALIST)
-Ryoto(WORLD FINALIST)
-motono(WORLD FINALIST)
-natadecoco(WORLD FINALIST)
-K2(WORLD FINALIST)
-y_kawano(WORLD FINALIST)
-Setter(WORLD FINALIST)
-</pre>
+<table>
+	<tr>
+		<th>Place (rank)</th>
+		<th>Team name</th>
+        </tr>
+<tr><td>1</td><td>ys</td></tr>
+<tr><td>2</td><td>Serval-chan (サーバルちゃん)</td></tr>
+<tr><td>3</td><td>Chinojo (ちのじょ)</td></tr>
+<tr><td>4</td><td>sumoru</td></tr>
+<tr><td>5</td><td>suikkee</td></tr>
+<tr><td>6</td><td>kasuka</td></tr>
+<tr><td>7</td><td>remin</td></tr>
+<tr><td>8</td><td>Gachapiso (ガチャピソ)</td></tr>
+<tr><td>Finalist</td><td>nhho</td></tr>
+<tr><td>Finalist</td><td>uptoyou</td></tr>
+<tr><td>Finalist</td><td>Ryoto</td></tr>
+<tr><td>Finalist</td><td>motono</td></tr>
+<tr><td>Finalist</td><td>natadecoco</td></tr>
+<tr><td>Finalist</td><td>K2</td></tr>
+<tr><td>Finalist</td><td>y_kawano</td></tr>
+<tr><td>Finalist</td><td>Setter</td></tr>
+</table>
 
 <hr>
 <footer>
