--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Apr 3: <a href="https://arena.ai-comp.net/">The battle server</a> will be closed on Apr 14. Please download battle results if necessary by the date. 
 <li>Mar 24: Resuls of <a href="final.html">the world final</a> are now available. Congratulations to all world finalists!
 <li>Mar 9: <a href="final.html">Timetable of the world final</a> collocated with 79th IPSJ National Convention at Nagoya University has been announced. Come to Nagoya, and watch exciting games together!
 <li>Mar 9: If you do not come to the contest site, you can still enjoy the contest by watching <a href="http://live.nicovideo.jp/watch/lv289954681">NicoNicoVideo Broadcasting</a>. Watch the world final together!
