--- a/index-jp.html
+++ b/index-jp.html
@@ -109,7 +109,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-<li>4月3日: <a href="https://arena.ai-comp.net/">対戦サーバ</a>における対戦結果の公開を本SamurAI Codingについて 4月14日に終了とする予定です。対戦結果が必要な方は同期日までに保存のほどよろしくお願いします。 
+<li>4月3日: <a href="https://arena.ai-comp.net/">対戦サーバ</a>における対戦結果の公開を4月14日に終了とする予定です。対戦結果が必要な方は同期日までに保存のほどよろしくお願いします。 
 <li>3月23日: <a href="final-jp.html">World Finalの対戦結果ならびに対戦の模様</a>を掲載しました。
 <li>3月9日: 情報処理学会全国大会併設の決勝 <a href="final-jp.html">World Finalの進行</a>を掲載しました。ぜひご一緒に、白熱の試合を観戦しましょう！
 <li>3月9日: 3月17日にWorld Finalの対戦があります。<a href="http://live.nicovideo.jp/watch/lv289954681">ニコニコ生放送【情報処理学会チャンネル】</a> にて生中継をご覧いただけます。ぜひ白熱の対戦をお楽しみください！
