--- a/final-jp.html
+++ b/final-jp.html
@@ -88,7 +88,7 @@
 
 当日の<a href="views/opening.html">ゲーム説明ならびに対戦の模様</a>をまとめましたのでご覧ください
 （注記: Chrome, FireFox, IE にて動作確認。ブラウザによっては音が出ないなどの場合あり）。
-結果は下記になります。また、企業賞は以下の4チームに授与されました。おめでとうございます。
+結果は下記になります。5位から8位については予選の結果に基づき決定しました。また、企業賞は以下の4チームに授与されました。勝者の皆さん、決勝進出者の皆さん、おめでとうございます。
 
 <ul>
 <li>株式会社レコチョク RecoChoku Co.,Ltd.: remin, Gachapiso （ガチャピソ）
