--- a/final.html
+++ b/final.html
@@ -87,8 +87,7 @@ If you do not come to the contest site, you can still enjoy the contest by watch
 
 Introduction of the game and the match results are <a href="views/opening.html">available here </a> 
 (NOTE: we confirmed its functionality on Chrome, FireFox and IE).
-Results are shown below. Moreover, special prizes are given to the following four teams by sponsors. 
-Congratulations! 
+Results are shown below. 5th-8th places were decided based on the result of the online preliminary round. Moreover, special prizes are given to the following four teams by sponsors. Congratulations to all winners and world finalists! 
 
 <ul>
 <li>株式会社レコチョク RecoChoku Co.,Ltd.: remin, Gachapiso （ガチャピソ）
