--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="Description" content="SamurAI Coding 2016-17">
+  <meta name="Description" content="SamurAI Coding 2017-18">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2016-17</title>
+  <title>SamurAI Coding 2017-18</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -171,8 +171,14 @@ All World Final contestants will be presented on the contest site.
       <h2>Committee</h2>
 
  <p>Hironori Washizaki (Director), Tasuku Hiraishi (Vice-Director), Takashi Chikayama (Executive Advisor),
- Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto, Tetsuro Tanaka, Makoto Miwa, Michiko Oba, Noriko Fukazawa, Hiroshi Suzuki
- </p>
+ Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto, Tetsuro Tanaka, Makoto Miwa, Kiyokuni Kawachiya, 
+Noriko Fukazawa, Hiroshi Suzuki</p>
+
+     <h2>Game Design and Development Support</h2>
+
+ <p>Shingo Ohtsuka</p>
+
+
     </section>
 
     <!--#include virtual="footer.html" -->
