--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ and
     </section>
 
         <table border="0">
-    	<tr><td><img src="banner.png" width=600 /><td>
+    	<tr><td><img src="scene-done.png" width=600 /><td>
     		<td>
 <a class="twitter-timeline" href="https://twitter.com/IpsjSamurAI" data-widget-id="678917108550397952">@IpsjSamurAIさんのツイート</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -164,7 +164,7 @@ All World Final contestants will be presented on the contest site.
 <p>Contestants can choose a certain programming language among various major languages. </p>
 </section>
     <section class="centered">
-      <img src="snapshot.png" width=60% />
+      <!-- <img src="snapshot.png" width=60% /> -->
     </section>
 
     <section id="committee">
