--- a/index-jp.html
+++ b/index-jp.html
@@ -34,7 +34,7 @@
 <hr/>
 
     <section id="main">
-      <h2>情報処理学会 国際 人工知能プログラミングコンテスト: SamurAI Coding 2017-18</h2>
+      <h2>第6回 情報処理学会 国際 人工知能プログラミングコンテスト: SamurAI Coding 2017-18</h2>
       <p>インターネット・IoT産業および人工知能技術の急速な発展によるエンジニアの質と量の確保がますます重要となっています。情報処理学会は若い世代から将来第一線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人材を育てることを目的として、国際的なAIプログラミングコンテスト "SamurAI Coding" を 2012 年度、2013 年度、2014 年度、2015 年度、および 2016 年度に開催いたしました（<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/2012photos.html">2012年度決勝の様子</a>、
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2014-15/">2014年度の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2015-16/">2015年度の結果</a>、<a href="http://www.ipsj.or.jp/event/samuraicoding/2016-17/">2016年度の結果</a>）。</p>
       <p>今年度も SamurAI Coding 2017-18 を開催いたします。ゲームをテーマにした人工知能およびプログラミングのスキルを競い、予選を勝ち抜いたチームが2018年3月に東京・早稲田大学で開催される決勝へ進みます。決勝は<a href="http://www.ipsj.or.jp/event/taikai/80/">情報処理学会 第80回全国大会</a>
