--- a/rules-jp.html
+++ b/rules-jp.html
@@ -41,13 +41,13 @@
   <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
-        <li><a href="rules-jp.html">ルール</a></li>
-        <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="https://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
+        <li>日程</li> <!-- <a href="schedule-jp.html">日程</a></li> -->
+        <li>ルール</li> <a href="rules-jp.html">ルール</a></li>
+        <li>ソフトウェア</li> <!-- <a href="software-jp.html">ソフトウェア</a></li> -->
+        <li>参加登録</li> <!-- <a href="https://arena.ai-comp.net/">参加登録</a></li> -->
+        <li>予選</li> <!-- <a href="preliminary-jp.html">予選</a></li> -->
+        <li>決勝</li> <!-- <a href="final-jp.html">決勝</a></li> -->
+        <li>FAQ</li> <!-- <a href="faq-jp.html">FAQ</a></li> -->
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -58,15 +58,17 @@
     <section id="main">
 	    <h2>SamurAI Coding のルール</h2>
       <p>SamurAI Coding はプログラマが AI プログラミングの技倆を競うコンテストです。
-	コンテストでは、それぞれ3人のサムライからなるふたつの軍団が <em>SamurAI 3x3 2016</em> (サムライ スリー オン スリー 2016) という名のゲームを戦い、各 AI プログラムは同一軍団の3人のサムライを制御します。
+コンテストでは、AIの制御するふたりのプレイヤが <em>SamurAI Jockey</em> (サムライジョッキー) という名のゲームで競います。
+具体的には、
+AIの制御するふたりのプレイヤがスタート位置から開始し、
+障害物が設置されたレースコース上でステップごとに位置を変えながら、
+ゴールに早く到達することを競うゲームです。
 </p>
       <ul>
-<!--
 	<li><a href="aboutgame-jp.html">
-	    SamurAI 3x3 ゲームの概要</a></li>
--->
-	<li><a href="rules-jp.pdf">
-	    ルールの詳細とプログラミングインタフェース (2016 年 9 月 14 日版)</a></li>
+	    SamurAI Jockey ゲームの概要</a></li>
+	<li><a href="rule-jp.pdf">
+	    サムライジョッキーゲームルール(暫定版) (2017 年 9 月 16 日版)</a></li>
 <!--
 	<li>予選と決勝のトーナメントルールについては、それぞれ
 	  <a href="preliminary-jp.html">予選のページ</a>および
@@ -93,6 +95,7 @@
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
+<!--
             <p>株式会社いい生活<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
             <p>チームラボ株式会社<br>
@@ -110,6 +113,7 @@
 
 <p>公益財団法人クマ財団<br>
 <a href="https://kuma-foundation.org/"><img src="images/KUMA2.png" width="140"/></a>
+-->
 
 <!--
 <p>TIS株式会社<br>
@@ -118,7 +122,7 @@
 -->
 
             <h3>サポーター</h3>
-
+<!--
 <p>株式会社日本レジストリサービス（JPRS）<br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 </p>
@@ -126,7 +130,7 @@
 <p>ヤフー株式会社<br>
 <a href="https://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
 </p>
-
+-->
 
 <!--
 <p>ヴォーカル・スクール ヴィーナス<br>
@@ -139,10 +143,10 @@
 -->
 
 <h3>メディアスポンサー</h3>
-
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/"><img src="images/gyaku_logo.jpg" width="75"/></a></p>
-
+-->
 <!--
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
 -->
@@ -159,7 +163,7 @@ China Computer Federation<br>
 慶應義塾大学理工学部情報工学科<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
 -->
-
+<!--
 本事業は、公益財団法人栢森情報科学振興財団による助成を受けています。<br><br>
 
 名古屋大学 大学院 情報科学研究科<br>
@@ -210,6 +214,7 @@ The Korean Institute of Information Scientists and Engineers<br>
 文部科学省
 <br><br>
 総務省
+-->
             </p>
           </section>
         </td>
