--- a/index-jp.html
+++ b/index-jp.html
@@ -20,7 +20,7 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li>日程</li> <!-- <a href="schedule-jp.html">日程</a></li> -->
-        <li>ルール</li> <a href="rules-jp.html">ルール</a></li>
+        <li><a href="rules-jp.html">ルール</a></li>
         <li>ソフトウェア</li> <!-- <a href="software-jp.html">ソフトウェア</a></li> -->
         <li>参加登録</li> <!-- <a href="https://arena.ai-comp.net/">参加登録</a></li> -->
         <li>予選</li> <!-- <a href="preliminary-jp.html">予選</a></li> -->
