--- a/rules-jp.html
+++ b/rules-jp.html
@@ -42,7 +42,7 @@
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
         <li>日程</li> <!-- <a href="schedule-jp.html">日程</a></li> -->
-        <li>ルール</li> <a href="rules-jp.html">ルール</a></li>
+        <li><a href="rules-jp.html">ルール</a></li>
         <li>ソフトウェア</li> <!-- <a href="software-jp.html">ソフトウェア</a></li> -->
         <li>参加登録</li> <!-- <a href="https://arena.ai-comp.net/">参加登録</a></li> -->
         <li>予選</li> <!-- <a href="preliminary-jp.html">予選</a></li> -->
@@ -65,8 +65,10 @@ AIの制御するふたりのプレイヤがスタート位置から開始し、
 ゴールに早く到達することを競うゲームです。
 </p>
       <ul>
+<!--
 	<li><a href="aboutgame-jp.html">
 	    SamurAI Jockey ゲームの概要</a></li>
+-->
 	<li><a href="rule-jp.pdf">
 	    サムライジョッキーゲームルール(暫定版) (2017 年 9 月 16 日版)</a></li>
 <!--
