--- a/software-jp.html
+++ b/software-jp.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="SamurAI Coding 2016-17">
+  <meta name="description" content="SamurAI Coding 2017-18">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2016-17</title>
+  <title>SamurAI Coding 2017-18</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,6 +15,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a>
 <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="110"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="150"/></a>
@@ -36,18 +37,20 @@
 <a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="45"/></a>
 <a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="55"/></a>
 <a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="85"/></a>
-<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="116"/></a>
+<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="116"/>
+-->
+</a>
 </center>
   <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
+        <li>日程</li> <!-- <a href="schedule-jp.html">日程</a></li> -->
         <li><a href="rules-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="https://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
+        <li>参加登録</li> <!-- <a href="https://arena.ai-comp.net/">参加登録</a></li> -->
+        <li>予選</li> <!-- <a href="preliminary-jp.html">予選</a></li> -->
+        <li>決勝</li> <!-- <a href="final-jp.html">決勝</a></li> -->
+        <li>FAQ</li> <!-- <a href="faq-jp.html">FAQ</a></li> -->
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -56,18 +59,13 @@
 
     <section id="main">
 	  <h2>ソフトウェア</h2>
-      <p>SamurAI 3x3 2016 ゲーム関連のソフトウェアとして、以下のものが公開されています。
+      <p>SamurAI Jockey ゲーム関連のソフトウェアとして、以下のものが公開されています。
       <ul>
-	<li><a href="software/samurai-software-20170207.tgz">
-	    SamurAI 3x3 2016 ゲームの実行管理システム</a> (2017年2月7日更新):
-	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
-	  いくつかの AI プログラムのサンプルも含まれています。
+	<li><a href="software/samurai-software-20170930.zip">SamurAI Jockey ゲーム用のソフトウェア</a> (2017年9月30日更新):
+SamurAI Jockey ゲームのレースの実行管理システム、ビューワ、およびサンプルが入っています。
+サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
 	  詳しくは README.jp を見てください。
 	</li>
-  <li><a href="software/views/samurai.html">
-      ゲームログの可視化ツール</a> (2017年3月4日更新):
-    実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
-  </li>
 <!--
 	<li>
 	  C++ 以外の言語で記述したサンプル AI プログラム。
@@ -97,6 +95,7 @@
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
+<!--
             <p>株式会社いい生活<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
             <p>チームラボ株式会社<br>
@@ -115,7 +114,7 @@
 
 <p>公益財団法人クマ財団<br>
 <a href="https://kuma-foundation.org/"><img src="images/KUMA2.png" width="140"/></a>
-
+-->
 <!--
 <p>TIS株式会社<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
@@ -123,7 +122,7 @@
 -->
 
             <h3>サポーター</h3>
-
+<!--
 <p>株式会社日本レジストリサービス（JPRS）<br>
 <a href="https://jprs.co.jp/"><img src="images/jprs.jpg" width="100"/></a>
 </p>
@@ -131,7 +130,7 @@
 <p>ヤフー株式会社<br>
 <a href="https://www.yahoo.co.jp/"><img src="images/Yahoo.gif" width="95"/></a>
 </p>
-
+-->
 
 <!--
 <p>ヴォーカル・スクール ヴィーナス<br>
@@ -144,10 +143,10 @@
 -->
 
 <h3>メディアスポンサー</h3>
-
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/"><img src="images/gyaku_logo.jpg" width="75"/></a></p>
-
+-->
 <!--
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
 -->
@@ -164,7 +163,7 @@ China Computer Federation<br>
 慶應義塾大学理工学部情報工学科<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
 -->
-
+<!--
 本事業は、公益財団法人栢森情報科学振興財団による助成を受けています。<br><br>
 
 名古屋大学 大学院 情報科学研究科<br>
@@ -215,6 +214,7 @@ The Korean Institute of Information Scientists and Engineers<br>
 文部科学省
 <br><br>
 総務省
+-->
             </p>
           </section>
         </td>
