--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li>Schedule</li> <!-- <a href="schedule.html">Schedule</a></li> -->
-        <li>Rules</li> <!-- <a href="rules.html">Rules</a></li> -->
-        <li>Software</li> <!-- <a href="software.html">Software</a></li> -->
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="software.html">Software</a></li>
         <li>Entry</li> <!-- <a href="https://arena.ai-comp.net/">Entry</a></li> -->
         <li>Preliminary</li> <!-- <a href="preliminary.html">Preliminary</a></li> -->
         <li>Final</li> <!-- <a href="final.html">Final</a></li> --> 
@@ -98,6 +98,8 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+          <li>September 30: <a href="software.html">The preliminary game software</a> has been published.
+          <li>September 30: <a href="rules.html">The preliminary game rules</a> have been published.
           <li>July 18: This preliminary website has been launched.
       </ul>
     </section>
