--- a/index-jp.html
+++ b/index-jp.html
@@ -121,6 +121,9 @@
       <p>
         プログラミング言語としては様々な主要な言語の中から自由に選ぶことができます（予定）。
       </p>
+
+<div style="width:100%;height:0px;position:relative;padding-bottom:76.494%;"><iframe src="https://streamable.com/s/bgfof/uuynug" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+
     </section>
 
     <section class="centered">
