--- a/index-jp.html
+++ b/index-jp.html
@@ -105,8 +105,8 @@
     <section id="importantdates">
       <h2>主要日程</h2>
       <ul>
-        <li>ルール公開：2017年9-10月</li>
-        <li>オンライン予選: 2018年1-2月</li>
+        <li>ルール暫定版 公開：2017年9月30日</li>
+        <li>オンライン予選: 2018年1-2月（予定）</li>
         <li>決勝（於 早稲田大学） 　　：2018年3月14日（水）　※<a href="http://www.ipsj.or.jp/event/taikai/80">情報処理学会第80回全国大会併催</a></li>
       </ul>
     </section>
@@ -114,7 +114,8 @@
     <section id="game">
       <h2>ゲーム内容</h2>
       <p>
-        本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。
+        SamurAI Coding はプログラマが AI プログラミングの技倆を競うコンテストです。
+コンテストでは、AIの制御するふたりのプレイヤが <a href="rules-jp.html"><em>SamurAI Jockey</em> (サムライジョッキー) </a>という名のゲームで競います。
         参加者はプログラミングスキルに加えて、
         アルゴリズムやAIストラテジーの設計スキルで競い合います。
       </p>
