--- a/rules.html
+++ b/rules.html
@@ -71,6 +71,9 @@ compete for time to goal in a course with obstacles.
 	  and <a href="final.html">the final round page</a>.</li>
 -->
       </ul>
+
+<div style="width:100%;height:0px;position:relative;padding-bottom:76.494%;"><iframe src="https://streamable.com/s/bgfof/tmcrrz" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+
     </section>
     <!--#include virtual="footer.html" -->
 
