--- a/rules-jp.html
+++ b/rules-jp.html
@@ -79,6 +79,9 @@ AIの制御するふたりのプレイヤがスタート位置から開始し、
 	  <a href="final-jp.html">決勝のページ</a>をご覧ください。</li>
 -->
       </ul>
+
+<div style="width:100%;height:0px;position:relative;padding-bottom:76.494%;"><iframe src="https://streamable.com/s/bgfof/tmcrrz" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+
     </section>
 
 <hr/>
