スポンサー追加：株式会社いい生活様

--- a/index-jp.html
+++ b/index-jp.html
@@ -15,6 +15,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"></a>
 </center>
   <nav id="global">
       <ul>
@@ -168,7 +169,8 @@
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
-
+            <p>e-Seikatsu Co., Ltd.<br>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"></a></p>
             <h3>サポーター</h3>
 
 <h3>メディアスポンサー</h3>
