--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+  <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"></a>
 </center>
   <nav id="global">
       <ul>
@@ -215,8 +216,8 @@ Noriko Fukazawa, Hiroshi Suzuki</p>
       	<td width="300">
       	  <section id="sponsors">
             <h3>Gold Sponsors</h3>
-<p>
-</p>
+            <p>e-Seikatsu Co., Ltd.<br>
+            <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"></a></p>
             <h3>Supporters</h3>
 <p>
 </p>
