GitHubで管理されていることをsoftwareの説明に追加

--- a/software.html
+++ b/software.html
@@ -66,6 +66,13 @@
 	  Sample AI program and visualizer are also included.
 	  See the README file for details.
 	</li>
+  <ul>
+    <li>
+      <div>In addition, this software is hosted on GitHub.</div>
+      <div><a href="https://github.com/SamurAI-Coding/Software2017-18">https://github.com/SamurAI-Coding/Software2017-18</a></div>
+      <div>If you find an issue, check it please.</div>
+    </li>
+  </ul>
 <!--
   <li><a href="software/views/samurai.html">
       Game Log Visualizer</a> (Updated 4 Mar 2017):
